Add changes to UMA grant and XACML extension.